ALVARO | fix spacing

--- a/src/components/HomepageTryIt/styles.module.css
+++ b/src/components/HomepageTryIt/styles.module.css
@@ -1,3 +1,9 @@
+.features {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .codepen {
   flex: auto;
   padding: 2rem 0rem;
